# RELICS5_v1_3_remove_copper_lead_15cm_PE_25cm

./: .gitignore  BambooMC.cc  CMakeLists.txt  Dockerfile  README.md  bamboo_out.root  compose.yaml  test.ipynb  test.root
Multi/energy/: Combine.py  Makefile  Sorting.py  combine_flux.py  cut.py  dtypes.py  gamma.mk  genNormalize.py  genTemplate.py  material.mk  muon.mk  muonRate.py  neutron.mk  run.sh  runCRN.sh  runCRN_1.slurm  runCRN_2.slurm  runCRN_3.slurm  runGammaON.sh  runGammaON_1.slurm  runGammaON_2.slurm  runGammaON_3.slurm  runMuon.sh  runMuon_1.slurm  runMuon_2.slurm  runMuon_3.slurm  runNeutronOFF.sh  runNeutronOFF_1.slurm  runNeutronON.sh  runNeutronON_1.slurm  runNeutronON_2.slurm  runNeutronON_3.slurm  runNeutronSample.sh  runall.sh  scan.sh  sorting_flux.py  template.py
Multi/energy/CADdata/: Lxe_InnerContainer.txt  Lxe_OutContainer.txt  OuterGasXeRZ.txt  XenonVetoRZ.txt
Multi/energy/data/: Flange63.txt  InnerContainerRZ.txt  XeVetobotteflon.txt  XeVetotopteflon.txt  shapingrings.txt  upbotVetoPMTs.txt
Multi/energy/old_test/: runCRN_test.sh  runCRN_test.slurm  runMaterial.sh  runMuon.sh  runMuon.slurm  runMuon_600cm_2000w.sh  runMuon_600cm_2000w.slurm  runall.sh  runall_gamma_R.sh  runall_gamma_R.slurm  runall_neutron_R_E.sh  runall_neutron_R_E.slurm
Multi/energy/runCRN_使用时放在energy层/: runCRN.sh  runCRN_1.slurm  runCRN_10.slurm  runCRN_2.slurm  runCRN_3.slurm  runCRN_4.slurm  runCRN_5.slurm  runCRN_6.slurm  runCRN_7.slurm  runCRN_8.slurm  runCRN_9.slurm  runCRN_test.sh  runCRN_test.slurm
Multi/energy/runMaterial_使用时放在energy层/: runCo60.sh  runCo60.slurm  runCs137.sh  runCs137.slurm  runK40.sh  runK40.slurm  runMaterial_test.sh  runMaterial_test.slurm  runTh232.sh  runTh232.slurm  runU235.sh  runU235.slurm  runU238.sh  runU238.slurm  runlXe.sh  runlXe.slurm
Multi/energy/runMuon_使用时放在energy层/: runMuon_10.slurm  runMuon_4.slurm  runMuon_5.slurm  runMuon_6.slurm  runMuon_7.slurm  runMuon_8.slurm  runMuon_9.slurm  runMuon_test.sh  runMuon_test.slurm
Multi/energy/runR_E_使用时放在energy层/: runR_E_test.sh  runR_E_test.slurm
Multi/optical/: Combine.py  Sorting.py  run.sh  runall.sh
background_calculation/: normalization_v1_3_remove_copper_lead_20cm_PE_20cm.json
background_calculation/CRN/: CRN_NR.py  CRN_json.py
background_calculation/CRN/0_20keV_20bins/: CRN_er.json  CRN_er_error.json  output_json.file
background_calculation/CRN/0_3000keV_50bins/: CRN_er.json  CRN_er_error.json  output_json.file
background_calculation/CRN/1_20keV_19bins/: CRN_er.json  CRN_er_error.json  output_json.file
background_calculation/CRN/1_3000keV_49bins/: CRN_er.json  CRN_er_error.json  output_json.file
background_calculation/CRN/NR_100bins/: CRN_nr.json  CRN_nr_bin.json  CRN_nr_error.json  output_NR.file
background_calculation/GammaON/: GammaON_NR.py  GammaON_json.py
background_calculation/NeutronOFF/: NeutronOFF_NR.py  NeutronOFF_json.py
background_calculation/NeutronON/: NeutronON_NR.py  NeutronON_json.py
background_calculation/material/: material_ER.py  material_NR.py  normalization_material.json
background_calculation/muon/: Muon_ER.py  Muon_NR.py
background_calculation/muon/20keV_20bins/: output.file
config/: cevns.json  cevns2S1.xml  cevnsS1.xml  cevns_0000001_gamma_ON_SIDE.xml  cevns_yuyong_2025_11_26_inner_container.xml  geo_params.json  test.root
data/: Flange.txt  Pipe.txt  botPMT.txt  botPMT_parent_world.txt  botTeflon.txt  neutronON.txt  shaping_rings.txt  topPMT.txt  topPMT_parent_world.txt  topTeflon.txt
include/: BambooAnalysis.hh  BambooControl.hh  BambooDetector.hh  BambooDetectorConstruction.hh  BambooGenerator.hh  BambooMaterial.hh  BambooPhysics.hh  GdmlLoader.hh  HEPEvtLoader.hh  PandaXAnalysis.hh  PandaXDataManager.hh  PandaXEnergyDepositionHit.hh  PandaXEventAction.hh  PandaXOpticalPhysics.hh  PandaXPhysics.hh  PandaXRunAction.hh  PandaXSensitiveDetector.hh  PandaXStackingAction.hh  PandaXSteppingAction.hh  PandaXSurfaceFluxHit.hh  PandaXTrackInformation.hh  PandaXTrackingAction.hh  SimpleGPSGenerator.hh  simple_factory.hh  version.hh.in
macro/: gammaSIDE.mac  neutronSIDE.mac  neutronTOP.mac  optical_S1.mac  optical_S2.mac  visu_relics.mac  visu_relics_2025_11_26.mac  visu_relics_solid.mac  visu_relics_solid_test.mac
macro/components/: Flange.mac  PMTbase.mac  PMTcasing.mac  PMTwindow.mac  Teflon.mac  copper.mac  lXe.mac  steel.mac
scripts/: arrangement.py  parquet2bin.py  parquet2sqlite3.py  relics_xml.py  relics_xml_old.py
scripts/test/: test.json  test.xml
src/: BambooControl.cc  BambooDetectorConstruction.cc  BambooUtils.cc  GdmlLoader.cc  HEPEvtLoader.cc  PandaXAnalysis.cc  PandaXDataManager.cc  PandaXEnergyDepositionHit.cc  PandaXEventAction.cc  PandaXOpticalPhysics.cc  PandaXPhysics.cc  PandaXRunAction.cc  PandaXSensitiveDetector.cc  PandaXStackingAction.cc  PandaXSteppingAction.cc  PandaXSurfaceFluxHit.cc  PandaXTrackingAction.cc  SimpleGPSGenerator.cc
(+361 files in other folders)
